--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "gatsby": "^2.18.3",
+    "gatsby": "^2.18.10",
     "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-react-helmet": "^3.1.16",
@@ -31,6 +31,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-visibility-sensor": "^5.1.1",
     "typeface-arvo": "0.0.72",
     "typeface-crimson-text": "0.0.72",
     "typeface-oswald": "0.0.75"
