--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.18.10",
     "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-modal-routing": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.5",
