--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.11.2",
     "react-visibility-sensor": "^5.1.1",
     "typeface-arvo": "0.0.72",
     "typeface-crimson-text": "0.0.72",
