--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@contentful/rich-text-types": "^14.1.0",
+    "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-gatsby": "^0.4.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.10",
     "gatsby-awesome-pagination": "^0.3.5",
@@ -24,6 +27,7 @@
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-remark-images": "^3.1.35",
+    "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-contentful": "^2.1.66",
     "gatsby-source-filesystem": "^2.1.39",
@@ -31,6 +35,8 @@
     "gatsby-transformer-sharp": "^2.3.6",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
+    "prism-themes": "^1.4.0",
+    "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
