--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prism-themes": "^1.4.0",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.2",
