--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "adamdolah.com",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "This is a site that I started late 2019 as a place to collect notes on different coding topics, links to useful resources as well as some information about me and my transitioning from practicing law to programming.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -39,13 +39,9 @@
     "prism-themes": "^1.4.0",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
-    "react-div-100vh": "^0.3.8",
-    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.2",
     "react-visibility-sensor": "^5.1.1",
-    "typeface-arvo": "0.0.72",
-    "typeface-crimson-text": "0.0.72",
     "typeface-eb-garamond": "^1.1.3",
     "typeface-oswald": "0.0.75"
   },
@@ -55,7 +51,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/A-Dolah/portfolio"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
