--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-plugin-prismjs": "^2.0.1",
     "babel-preset-gatsby": "^0.4.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.21.24",
+    "gatsby": "^2.24.90",
     "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-modal-routing": "^1.1.0",
@@ -39,6 +39,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.11.0",
     "react-modal": "^3.11.2",
     "react-visibility-sensor": "^5.1.1",
     "typeface-eb-garamond": "^1.1.3",
