--- a/package.json
+++ b/package.json
@@ -8,46 +8,46 @@
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "env-cmd -f .env gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
+    "start": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
-    "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@contentful/rich-text-types": "^14.1.0",
+    "@contentful/rich-text-react-renderer": "^15.6.2",
+    "@contentful/rich-text-types": "^15.7.0",
     "babel-plugin-prismjs": "^2.0.1",
-    "babel-preset-gatsby": "^0.4.1",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.24.90",
+    "babel-preset-gatsby": "^2.3.0",
+    "dotenv": "^10.0.0",
+    "gatsby": "^4.3.0",
     "gatsby-awesome-pagination": "^0.3.5",
-    "gatsby-image": "^2.2.34",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-modal-routing": "^1.1.0",
-    "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sass": "^2.1.24",
-    "gatsby-plugin-sharp": "^2.6.36",
-    "gatsby-remark-images": "^3.1.35",
-    "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-source-contentful": "^2.1.66",
-    "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-remark": "^2.6.38",
-    "gatsby-transformer-sharp": "^2.3.6",
-    "node-sass": "^4.13.1",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-remark-images": "^6.3.0",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^7.1.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-remark": "^5.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
+    "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
     "prism-themes": "^1.4.0",
     "prismjs": "^1.20.0",
-    "react": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.11.0",
+    "react": "^17.0.2 ",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.11.2",
     "react-visibility-sensor": "^5.1.1",
     "typeface-eb-garamond": "^1.1.3",
-    "typeface-oswald": "0.0.75"
+    "typeface-oswald": "1.1.13"
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^2.5.0"
   },
   "repository": {
     "type": "git",
